--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/black3"
         android:textStyle="bold"
         android:text="Password Assistance"/>
 
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
-        android:textColor="@color/black"
+        android:textColor="@color/black3"
         android:text="Enter your email associated with your account. A temporary password will be sent to your email"/>
 
     <EditText
@@ -42,7 +42,7 @@
         android:layout_marginTop="@dimen/small_margin"
         android:background="@drawable/rectangle"
         android:backgroundTint="@color/blueButton"
-        android:textColor="@color/eeeeee"
+        android:textColor="@color/greyE"
         android:textSize="16sp"
         android:text="Continue"
         android:textAllCaps="false"/>
