--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,14 +4,16 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="colorTile1">#5D9DAD</color>
+    <color name="colorTile1">#5D9DAD</color
+        >
     <color name="colorTile2">#593FB7</color>
     <color name="colorTile3">#BF5733</color>
     <color name="colorTile4">#8B00A6</color>
-    <color name="eeeeee">#EEEEEE</color>
+    <color name="greyE">#EEEEEE</color>
     <color name="black3">#333333</color>
     <color name="blueButton">#0D9ECE</color>
     <color name="googleRed">#D34836</color>
     <color name="linkBlue">#006CC5</color>
-    <color name="black">#000000</color>
+    <color name="greyD">#DDDDDD</color>
+    <color name="greyA">#AAAAAA</color>
 </resources>
