--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/rectangle"
         android:backgroundTint="@color/blueButton"
-        android:textColor="@color/eeeeee"
+        android:textColor="@color/greyE"
         android:layout_marginTop="@dimen/large_margin"
         android:layout_marginBottom="@dimen/medium_margin"
         android:text="login"/>
@@ -72,7 +72,7 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/rectangle"
         android:backgroundTint="@color/googleRed"
-        android:textColor="@color/eeeeee"
+        android:textColor="@color/greyE"
         android:layout_marginTop="@dimen/large_margin"
         android:layout_marginBottom="@dimen/medium_margin"
         android:textAllCaps="false"
@@ -100,7 +100,7 @@
         android:textColor="@color/googleRed"
         android:background="@null"
         android:text="Sign Up"/>
-w
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
