--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,7 +128,7 @@
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_weight=".5"
                 android:background="@drawable/rectangle"
-                android:backgroundTint="@color/eeeeee"
+                android:backgroundTint="@color/greyE"
                 android:text="cancel"
                 android:textColor="@color/colorPrimary" />
 
@@ -139,7 +139,7 @@
                 android:layout_weight=".5"
                 android:background="@drawable/rectangle"
                 android:text="register"
-                android:textColor="@color/eeeeee" />
+                android:textColor="@color/greyE" />
         </LinearLayout>
 
     </LinearLayout>
