--- a/app/src/main/res/drawable/ic_menu_notifications.xml
+++ b/app/src/main/res/drawable/ic_menu_notifications.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="535.5">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/darkIcon"
         android:pathData="M142.8,53.55l-35.7-35.7C45.9,63.75,5.1,135.15,0,216.75h51C56.1,147.9,89.25,89.25,142.8,53.55z
 M484.5,216.75h51
 c-5.1-81.6-43.35-153-104.55-198.9l-35.7,35.7C446.25,89.25,479.4,147.9,484.5,216.75z
