--- a/app/src/main/res/drawable/ic_menu_vital_signs.xml
+++ b/app/src/main/res/drawable/ic_menu_vital_signs.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="48">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/darkIcon"
         android:pathData="M44,5.476H4c-2.2,0-4,1.8-4,4v12.481h12.301l2.688-6.877c0.307-0.785,1.094-1.299,1.914-1.271
 c0.842,0.022,1.581,0.569,1.847,1.368l3.803,11.437l4.104-9.763c0.302-0.717,0.991-1.194,1.77-1.223
 c0.802-0.034,1.503,0.396,1.855,1.089l2.676,5.241h2.709c1.104,0,2,0.896,2,2s-0.896,2-2,2h-3.935
