--- a/app/src/main/res/layout/list_item_current_medication.xml
+++ b/app/src/main/res/layout/list_item_current_medication.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medicine Names"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="20dp"
         android:id="@+id/tvMLMedicationNames"/>
 
@@ -51,13 +52,12 @@
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:backgroundTint="@color/greyA"
+                android:backgroundTint="@color/lightIcon"
                 android:background="@drawable/ic_menu_notifications"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/medium_margin"
-                android:textStyle="bold"
                 android:text="Notify"/>
         </LinearLayout>
         <LinearLayout
@@ -69,14 +69,13 @@
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:backgroundTint="@color/greyA"
+                android:backgroundTint="@color/lightIcon"
                 android:background="@drawable/ic_delete_bin"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/medium_margin"
-                android:textStyle="bold"
                 android:text="Delete"/>
         </LinearLayout>
     </LinearLayout>
