--- a/app/src/main/res/layout/list_item_current_medication.xml
+++ b/app/src/main/res/layout/list_item_current_medication.xml
@@ -1,76 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/current_medication_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/current_medication_list_item"
     android:padding="@dimen/list_item_padding">
 
     <TextView
+        android:id="@+id/tvMLMedicationNames"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medicine Names"
         android:textColor="@color/colorPrimaryText"
-        android:textSize="20dp"
-        android:id="@+id/tvMLMedicationNames"/>
+        android:textSize="20dp"/>
 
     <TextView
+        android:id="@+id/tvMLDoctorName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Doctor Name"
         android:layout_below="@id/tvMLMedicationNames"
-        android:id="@+id/tvMLDoctorName"/>
+        android:text="Doctor Name"/>
 
     <TextView
+        android:id="@+id/tvMLDisease"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Disease/Symptom"
         android:layout_below="@id/tvMLDoctorName"
-        android:id="@+id/tvMLDisease"/>
+        android:text="Disease/Symptom"/>
 
     <View
+        android:id="@+id/horizontal_line"
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_below="@id/tvMLDisease"
-        android:background="@color/greyE"
-        android:layout_marginTop="@dimen/large_margin"
         android:layout_centerHorizontal="true"
-        android:id="@+id/horizontal_line" />
+        android:layout_marginTop="@dimen/large_margin"
+        android:background="@color/greyE" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/horizontal_line"
-        android:paddingTop="@dimen/medium_margin"
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/llMLNotification"
             android:layout_width="0dp"
-            android:layout_weight=".5"
             android:layout_height="wrap_content"
+            android:layout_weight=".5"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/medium_margin">
             <ImageView
+                android:id="@+id/ivMLNotificationIcon"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:backgroundTint="@color/lightIcon"
-                android:background="@drawable/ic_menu_notifications"/>
+                android:background="@drawable/ic_menu_notifications"
+                android:backgroundTint="@color/lightIcon"/>
+            <ImageView
+                android:id="@+id/ivMLNotificationIconActive"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:background="@drawable/ic_menu_notifications"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:visibility="gone"/>
             <TextView
+                android:id="@+id/tvMLNotification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/medium_margin"
                 android:text="Notify"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/llMLDelete"
             android:layout_width="0dp"
-            android:layout_weight=".5"
             android:layout_height="wrap_content"
+            android:layout_weight=".5"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/medium_margin">
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:backgroundTint="@color/lightIcon"
-                android:background="@drawable/ic_delete_bin"/>
+                android:background="@drawable/ic_delete_bin"
+                android:backgroundTint="@color/lightIcon"/>
 
             <TextView
                 android:layout_width="wrap_content"
