--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -18,15 +18,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username:"
+                android:text="full name:"
                 android:textSize="18sp"/>
 
             <EditText
                 android:id="@+id/editT_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="change name"
-                android:text="xiaolei"/>
+                android:hint="change name"/>
         </LinearLayout>
 
         // email
