--- a/app/src/main/res/layout/fragment_current_medication.xml
+++ b/app/src/main/res/layout/fragment_current_medication.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="48dp"
+    android:id="@+id/fragment_current_medication_id"
     tools:context="com.along.android.healthmanagement.fragments.CurrentMedicationTabFragment">
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
