--- a/app/src/main/res/layout/fragment_medication_listing.xml
+++ b/app/src/main/res/layout/fragment_medication_listing.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/fragment_medication_listing_id"
     android:layout_height="wrap_content">
 
     <android.support.design.widget.AppBarLayout
@@ -27,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_medication_fab"
