--- a/app/src/main/res/layout/fragment_medication_history.xml
+++ b/app/src/main/res/layout/fragment_medication_history.xml
@@ -5,6 +5,16 @@
     android:paddingTop="48dp"
     tools:context="com.along.android.healthmanagement.fragments.MedicationHistoryTabFragment">
 
+    <TextView
+        android:id="@+id/tvMHEmptyMsg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No medication history to display"
+        android:gravity="center"
+        android:paddingTop="@dimen/large_margin"
+        android:textSize="20dp"
+        android:textStyle="italic" />
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/medication_history_list"
