--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -3,14 +3,102 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <LinearLayout
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         // username
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_fullname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
+
+            <EditText
+                android:id="@+id/editT_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Full Name"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        // email
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
+            <EditText
+                android:hint="Email"
+                android:text="123"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editT_email"/>
+        </android.support.design.widget.TextInputLayout>
+
+
+        // password 1
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
+
+            <EditText
+                android:hint="New Password"
+                android:text=""
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:id="@+id/editT_password1"/>
+        </android.support.design.widget.TextInputLayout>
+
+        // password 2
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
+
+            <EditText
+                android:hint="Confirm Password"
+                android:text=""
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:id="@+id/editT_password2"/>
+        </android.support.design.widget.TextInputLayout>
+
+        // age
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
+
+            <EditText
+                android:hint="Age"
+                android:text="18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editT_age"/>
+        </android.support.design.widget.TextInputLayout>
+
+
+        // gender
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="horizontal"
             android:paddingLeft="16dp"
             android:paddingTop="14dp">
@@ -18,218 +106,84 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="full name:"
-                android:textSize="18sp"/>
-
-            <EditText
-                android:id="@+id/editT_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="change name"/>
-        </LinearLayout>
-
-        // email
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Email:"
-                android:textSize="18sp"/>
-
-            <EditText
-                android:hint="change email"
-                android:text="123"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editT_email"/>
-        </LinearLayout>
-
-
-        // password 1
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Password:"
-            android:textSize="18sp"/>
-
-            <EditText
-                android:hint="change password"
-                android:text=""
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:id="@+id/editT_password1"/>
-        </LinearLayout>
-        // password 2
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ConfirmPassword:"
-                android:textSize="18sp"/>
-
-            <EditText
-                android:hint="change password"
-                android:text=""
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:id="@+id/editT_password2"/>
-        </LinearLayout>
-    // age
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Age:"
-                android:textSize="18sp"/>
-
-            <EditText
-                android:hint="change age"
-                android:text="18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editT_age"/>
-        </LinearLayout>
-    // gender
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="Gender:"
+                android:layout_marginTop="@dimen/small_margin"
                 android:textSize="18sp"/>
 
-            <!--<EditText-->
-                <!--android:hint="change gender"-->
-                <!--android:text="Male"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/editT_gender"/>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="@dimen/medium_margin"-->
-                <!--android:orientation="horizontal">-->
-                <RadioGroup
-                    android:id="@+id/radioGroupGenderProfile"
-                    android:layout_width="0dp"
+            <RadioGroup
+                android:id="@+id/radioGroupGenderProfile"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".6"
+                android:layout_marginBottom="@dimen/medium_margin"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioMaleProfile"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".6"
-                    android:layout_marginBottom="@dimen/medium_margin"
-                    android:orientation="horizontal">
-                    <RadioButton
-                        android:id="@+id/radioMaleProfile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black3"
-                        android:checked="true"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:text="Male"/>
+                    android:textColor="@color/black3"
+                    android:checked="true"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:text="Male"/>
 
-                    <RadioButton
-                        android:id="@+id/radioFemaleProfile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black3"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:text="Female" />
-                </RadioGroup>
+                <RadioButton
+                    android:id="@+id/radioFemaleProfile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black3"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:text="Female" />
+            </RadioGroup>
             <!--</LinearLayout>-->
         </LinearLayout>
-    // height
-        <LinearLayout
+        // height
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Height:"
-                android:textSize="18sp"/>
-
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
             <EditText
-                android:hint="change height"
+                android:hint="Height"
                 android:text="6'10'"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editT_height"/>
-        </LinearLayout>
+        </android.support.design.widget.TextInputLayout>
+
         // weight
-        <LinearLayout
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Weight:"
-                android:textSize="18sp"/>
-
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
             <EditText
-                android:hint="change weight"
+                android:hint="Weight"
                 android:text="78KG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editT_weight"/>
-        </LinearLayout>
+        </android.support.design.widget.TextInputLayout>
+
         // phoneNumber
-        <LinearLayout
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_profile_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
-            android:paddingLeft="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Phone:"
-                android:textSize="18sp"/>
-
+            android:paddingLeft="16dp"
+            android:paddingTop="14dp">
             <EditText
-                android:hint="change phone"
+                android:hint="Phone"
                 android:text="123"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editT_phoneNumber"/>
-        </LinearLayout>
+        </android.support.design.widget.TextInputLayout>
+
         // button
 
         <LinearLayout
