--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,49 +7,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/large_margin"
-        android:orientation="vertical"
-        android:padding="@dimen/large_margin">
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/etRealname"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_realname"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/medium_margin"
-            android:inputType="textPersonName"
-            android:hint="Full Name" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/etPassword"
+            <EditText
+                android:id="@+id/etRealname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/medium_margin"
+                android:inputType="textPersonName"
+                android:hint="Full Name" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:layout_marginBottom="@dimen/medium_margin"
-            android:hint="Password" />
-
-        <EditText
-            android:id="@+id/etConfirmpassword"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:layout_marginBottom="@dimen/medium_margin"
+                android:hint="Password" />
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_confirm_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:layout_marginBottom="@dimen/medium_margin"
-            android:hint="Confirm Password" />
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/etConfirmpassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:layout_marginBottom="@dimen/medium_margin"
+                android:hint="Confirm Password" />
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/etEmail"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:layout_marginBottom="@dimen/medium_margin"
-            android:hint="Email" />
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:layout_marginBottom="@dimen/medium_margin"
+                android:hint="Email" />
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/etPhonenumber"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_phone_number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:layout_marginBottom="@dimen/medium_margin"
-            android:hint="Phone Number" />
-
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/etPhonenumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:layout_marginBottom="@dimen/medium_margin"
+                android:hint="Phone Number" />
+        </android.support.design.widget.TextInputLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,13 +86,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
                 android:layout_marginBottom="@dimen/medium_margin"
+                android:checkedButton="@+id/radioMale"
                 android:orientation="horizontal">
                 <RadioButton
                     android:id="@+id/radioMale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black3"
-
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Male"/>
 
@@ -87,27 +112,40 @@
             android:layout_marginBottom="@dimen/medium_margin"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/etWeight"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_weight"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".33"
-                android:hint="Weight (lb)" />
-
-            <EditText
-                android:id="@+id/etHeight"
+                android:layout_weight=".33">
+                <EditText
+                    android:id="@+id/etWeight"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Weight (lb)" />
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_height"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".33"
-                android:hint="Height (in)" />
+                android:layout_weight=".33">
+                <EditText
+                    android:id="@+id/etHeight"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Height (in)" />
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/etAge"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_age"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Age (years)   " />
-
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/etAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Age (years)   " />
+        </android.support.design.widget.TextInputLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
