--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -182,8 +182,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editT_phoneNumber"/>
-        </android.support.design.widget.TextInputLayout>
-
+        </LinearLayout>
         // button
 
         <LinearLayout
