Add medicine form

--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -182,7 +182,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editT_phoneNumber"/>
-        </LinearLayout>
+        </android.support.design.widget.TextInputLayout>
         // button
 
         <LinearLayout
